# git-mcp-server

./: .dockerignore  .env  Dockerfile  pyproject.toml
src/app/: main.py  schemas.py  server.py  service.py
tests/: test_client.py
